<resources>
    <string name="app_name">Memory Match</string>
    <string name="new_game">New Game</string>
    <string name="main_menu">Main Menu</string>
    <string name="congrats">Congratulations!</string>
    <string name="title_game">Game</string>
    <string name="help_game">Help</string>
    <string name="help_instructions">Match each card to pair.</string>
    <string name="memory_main_menu">Memory Match</string>
    <string name="background_main">Wave Picture</string>
    <string name="memory">Memory</string>
    <string name="game">Game</string>
    <string name="made_by">Made by:</string>
    <string name="amanda_t">Amanda T.</string>
    <string name="kelsey_w">Kelsey W.</string>
    <string name="komlan_s">Komlan S.</string>
    <string name="parker_w">Parker W.</string>
    <string name="level_id">Difficulty</string>


</resources>