<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".information">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/made_by"
        android:textAlignment="center"
        android:textColor="#FAF7F7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:layout_weight="1"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/amanda_t"
        android:textAlignment="center"
        android:textColor="#E91E63"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_weight="1"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/kelsey_w"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_weight="1"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/komlan_s"
        android:textAlignment="center"
        android:textColor="#FFEB3B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:layout_weight="1"
        android:fontFamily="@font/holtwood_one_sc"
        android:text="@string/parker_w"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="244dp"
        android:layout_height="73dp"
        android:layout_marginTop="72dp"
        android:layout_weight=".01"
        android:backgroundTint="#D6860E"
        android:fontFamily="@font/audiowide"
        android:onClick="startMainMenu"
        android:padding="15dp"
        android:text="MAIN MENU"
        android:textAlignment="center"
        android:textColor="#F8095EA1"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>